samples/_failures_safe/1761692668_b56aca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50deb461.c: In function ‘main’:
./samples/SAFE/__tmp_50deb461.c:152:18: error: ‘de’ undeclared (first use in this function)
  152 |     buffer_free(&de
      |                  ^~
./samples/SAFE/__tmp_50deb461.c:152:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_50deb461.c:152:20: error: expected ‘)’ at end of input
  152 |     buffer_free(&de
      |                ~   ^
      |                    )
./samples/SAFE/__tmp_50deb461.c:152:5: error: expected declaration or statement at end of input
  152 |     buffer_free(&de
      |     ^~~~~~~~~~~
